solution day10 java